[package]
name = "gallery_backend"
version = "0.1.0"
edition = "2021"
authors = ["N1ghtStorm <diman1ghtly@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }